# boldos

./: .gdbinit  README.md
init/: Cargo.toml  Makefile  rust-toolchain.toml
init/.cargo/: config.toml
init/src/: aarch64-none-elf.json  drv.rs  linker.lds  main.rs  utils.rs
kernel/: .gitignore  Cargo.toml  build.rs  virt.dts
kernel/.cargo/: config.toml
kernel/scripts/: run.sh
kernel/src/: aarch64-none-elf.json  linker.lds  main.rs  page_alloc.rs
kernel/src/aarch64/: aarch64-none-elf.json  exceptions.rs  init.s  interrupts.rs  linker.lds  mmu.rs  mod.rs  usermode.rs
kernel/src/drv/: arm_gic.rs  fw_cfg.rs  mod.rs  qemu_console.rs  virtio.rs
kernel_api/: Cargo.toml
kernel_api/src/: lib.rs
