[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_api = { path = "../kernel_api" }
num_enum = { version = "0.7.4", default-features = false }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
