[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "10.0.0"
fdt-rs = { version = "0.4.5", default-features = false }
zerocopy = "0.8.24"
tock-registers = "0.9.x"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
