[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "10.0.0"
zerocopy = { version = "0.8.26", features = ["derive"] }
tock-registers = "0.9.x"
elain = "0.3.1"

[build-dependencies]
walkdir = "2.5.0"

[features]
# Enabled debug logging in mmu code
log_mmu = []

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true
